--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -2,61 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datomico.nlp_processing import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/samuel/anaconda3/envs/datomico/bin/python\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/samuel/anaconda3/envs/datomico/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/home/samuel/anaconda3/envs/datomico/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
+      "ACCESO_DEM_NAL.csv  Tweets_BasileaIII.csv\r\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "print(sys.executable)\n",
-    "import pandas as pd"
+    "!ls data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datomico.data_processing import correct_state_ids, df_to_d3map"
+    "PATH = Path('data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = 'data/'"
+    "df = pd.read_csv(PATH/'Tweets_BasileaIII.csv', encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acceso = pd.read_csv(f'{PATH}ACCESO_DEM_NAL.csv', encoding='ISO-8859-1')\n",
-    "df = correct_state_ids(acceso, df_column=\"Clave_Estado\")\n",
-    "df = df_to_d3map(df, [\"state\", \"Establecimientos_con_TPV_10mil_adultos\"])\n",
-    "df.to_csv('data/TPV_10mil_adultos.csv')"
+    "df[\"label\"] = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['text', 'label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b9cdb5206cb4e779f182264a263f03d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Label(value='Etiqueta'), ButtonLabeling(description='Negativo', style=ButtonStyl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "w = LabelMyTextWidget(df, 'text', ['Negativo', 'Positivo'], [0, 1], 'label', unclassified_value=-1)\n",
+    "w.display()"
    ]
   },
   {
@@ -83,7 +125,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
